--- a/src/SCSS/about.css
+++ b/src/SCSS/about.css
@@ -31,7 +31,7 @@ main {
 }
 
 .user-info {
-  font-family: "Tinos", serif;
+  font-family: "Ubuntu", sans-serif;
   text-align: center;
   max-width: 40rem;
   min-width: 2rem;
@@ -41,11 +41,13 @@ main {
 .user-info h1 {
   font-size: clamp(30pt, 9vw, 60pt);
   margin: 1rem 0;
+  font-weight: 400;
 }
 
 .user-info p {
   font-size: clamp(13pt, 3vw, 15pt);
   margin: 0 2rem;
+  font-weight: 300;
 }
 
 footer {
