--- a/src/SCSS/about.scss
+++ b/src/SCSS/about.scss
@@ -12,7 +12,7 @@ main {
 }
 
 .user-info {
-    font-family: $tinos;
+    font-family: $ubuntu;
     text-align: center;
     max-width: 40rem;
     min-width: 2rem;
@@ -20,11 +20,13 @@ main {
     h1 {
         font-size: clamp(30pt, 9vw, 60pt); 
         margin: 1rem 0;
+        font-weight: 400;
     }
     
     p {
         font-size: clamp(13pt, 3vw, 15pt);
         margin: 0 2rem;
+        font-weight: 300;
     }
 }
 
