--- a/src/SCSS/navbar.css
+++ b/src/SCSS/navbar.css
@@ -83,15 +83,15 @@ nav {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    left: 0;
+    right: 0;
     height: 75vh;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
     text-align: left;
     z-index: 7;
-    -webkit-transform: translateX(-100%);
-            transform: translateX(-100%);
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%);
     -webkit-transition: -webkit-transform 0.3s;
     transition: -webkit-transform 0.3s;
     transition: transform 0.3s;
@@ -99,7 +99,7 @@ nav {
     opacity: 0;
   }
   .main-links .main-link {
-    margin: 1rem 2rem 1rem 1rem;
+    margin: 1rem 3rem;
   }
 }
 
@@ -109,7 +109,7 @@ nav {
 }
 
 .selected {
-  font-weight: bolder;
+  font-weight: 700 !important;
   position: relative;
   pointer-events: none;
 }
@@ -130,7 +130,8 @@ nav {
   color: #fff;
   text-decoration: none;
   font-size: 15pt;
-  font-family: "Tinos", serif;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 300;
   position: relative;
 }
 
