--- a/src/SCSS/navbar.scss
+++ b/src/SCSS/navbar.scss
@@ -48,16 +48,16 @@ nav {
         background: $black;
         top: 100%;
         flex-direction: column;
-        left: 0;
+        right: 0;
         height: 75vh;
         justify-content: center;
         text-align: left;
         z-index: 7;
-        transform: translateX(-100%);
+        transform: translateX(100%);
         transition: transform 0.3s;
         opacity: 0;
         .main-link {
-            margin: 1rem 2rem 1rem 1rem;
+            margin: 1rem 3rem;
         }
     }
 }
@@ -67,7 +67,7 @@ nav {
 }
 
 .selected{
-    font-weight: bolder;
+    font-weight: 700 !important;
     position: relative;
     pointer-events: none;
     &::before{
@@ -87,7 +87,8 @@ nav {
     color: $white;
     text-decoration: none;
     font-size: 15pt;
-    font-family: $tinos;
+    font-family: $ubuntu;
+    font-weight: 300;
     position: relative;
     &:hover{
         text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
