--- a/src/SCSS/variables.scss
+++ b/src/SCSS/variables.scss
@@ -4,3 +4,4 @@ $off-black: hsl(0, 0%, 6%);
 $theme: hsl(348, 100%, 47%);
 $bebas: 'Bebas Neue', cursive;
 $tinos: 'Tinos', serif;
+$ubuntu: 'Ubuntu', sans-serif;
