--- a/src/SCSS/footer.css
+++ b/src/SCSS/footer.css
@@ -44,7 +44,7 @@ footer {
 
 .footer-ver {
   color: #fff;
-  font-family: "Tinos", serif;
+  font-family: "Ubuntu", sans-serif;
   letter-spacing: 1px;
   font-size: 10pt;
   opacity: 0.5;
