--- a/src/SCSS/footer.scss
+++ b/src/SCSS/footer.scss
@@ -38,7 +38,7 @@ footer {
 
 .footer-ver {
     color: $white;
-    font-family: $tinos;
+    font-family: $ubuntu;
     letter-spacing: 1px;
     font-size: 10pt;
     opacity: 0.5;
