--- a/src/SCSS/about.css
+++ b/src/SCSS/about.css
@@ -9,25 +9,23 @@ body {
   background: #000;
   color: #fff;
   font-size: 100%;
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  overflow: hidden;
 }
 
 main {
+  width: 100vw;
+  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 50vh;
-  overflow-x: hidden;
-  text-align: center;
 }
 
 .user-info {
@@ -35,7 +33,7 @@ main {
   text-align: center;
   max-width: 40rem;
   min-width: 2rem;
-  margin: 0 2rem;
+  margin: 5rem 2rem;
 }
 
 .user-info h1 {
