--- a/src/SCSS/about.scss
+++ b/src/SCSS/about.scss
@@ -1,14 +1,15 @@
 @import 'globals';
 @import 'variables';
 
+body {
+    overflow: hidden;
+}
+
 main {
+    width: 100vw;
+    height: 100vh;
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    align-items: center;
-    height: 50vh;
-    overflow-x: hidden;
-    text-align: center;
 }
 
 .user-info {
@@ -16,7 +17,7 @@ main {
     text-align: center;
     max-width: 40rem;
     min-width: 2rem;
-    margin: 0 2rem;
+    margin: 5rem 2rem;
     h1 {
         font-size: clamp(30pt, 9vw, 60pt); 
         margin: 1rem 0;
