--- a/src/SCSS/globals.css
+++ b/src/SCSS/globals.css
@@ -9,5 +9,7 @@ body {
   background: #000;
   color: #fff;
   font-size: 100%;
+  width: 100%;
+  height: 100%;
 }
 /*# sourceMappingURL=globals.css.map */
