--- a/src/SCSS/navbar.scss
+++ b/src/SCSS/navbar.scss
@@ -51,7 +51,7 @@ nav {
         right: 0;
         height: 75vh;
         justify-content: center;
-        text-align: left;
+        text-align: center;
         z-index: 7;
         transform: translateX(100%);
         transition: transform 0.3s;
@@ -128,4 +128,8 @@ nav {
 
 .overlayOn{
     display: block;
+}
+
+.nav-wrapper {
+    overflow-x: hidden;
 }
