--- a/src/SCSS/style.css
+++ b/src/SCSS/style.css
@@ -9,6 +9,8 @@ body {
   background: #000;
   color: #fff;
   font-size: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 ::-webkit-scrollbar {
@@ -17,7 +19,6 @@ body {
 
 main {
   margin: 5rem 0;
-  overflow-x: hidden;
 }
 
 @media (max-width: 59rem) {
