--- a/CSS/style.css
+++ b/CSS/style.css
@@ -633,7 +633,7 @@ nav {
 		animation: bounceBack 0.5s;
 	}
 	.fa-chevron-down{
-		display: none;
+		display: none !important;
 	}
 	.dropdown-content{
 		display: none !important;
