--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,20 +5,20 @@
 	padding: 0;
 	box-sizing: border-box;
 }
-html{
+html {
 	scroll-behavior: smooth;
 }
-:root{
+:root {
 	--primary-clr: #0f0f0f;
 	--primary2-clr: #1b1b1b;
 	--primary-blur: hsla(0, 0%, 11%, 0.8);
 	--primaryFont-clr: #fff;
-	--accent-clr:  hsl(348, 89%, 41%);
+	--accent-clr: hsl(348, 89%, 41%);
 	--accent100-clr: hsl(348, 44%, 41%);
 	--scroll-bar: #1b1b1b;
 	transition: 0.2s;
 }
-.light-mode{
+.light-mode {
 	--primary-clr: #fff;
 	--primary2-clr: #e4e4e4;
 	--primary-blur: rgba(235, 235, 235, 0.8);
@@ -26,10 +26,11 @@ html{
 	--scroll-bar: #e4e4e4;
 	transition: 0.2s;
 }
-.notification-dark, .notification-light{
+.notification-dark,
+.notification-light {
 	background: var(--primary-blur);
 	-webkit-backdrop-filter: saturate(180%) blur(10px);
-    backdrop-filter: saturate(180%) blur(10px);
+	backdrop-filter: saturate(180%) blur(10px);
 	color: var(--primaryFont-clr);
 	position: fixed;
 	top: -200px;
@@ -38,7 +39,7 @@ html{
 	background-color: var(--primary-blur);
 	padding: 20px 0;
 	border-radius: 5px;
-	font-family: 'Varela Round', sans-serif;
+	font-family: "Varela Round", sans-serif;
 	box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.4);
 	user-select: none;
 	cursor: default;
@@ -46,51 +47,51 @@ html{
 	text-align: center;
 	width: 350px;
 }
-.notiCall{
+.notiCall {
 	animation: noti 4s;
 }
-@keyframes noti{
-	0%{
+@keyframes noti {
+	0% {
 		top: -100px;
 	}
-	10%{
+	10% {
 		top: 100px;
 	}
-	20%{
+	20% {
 		top: 100px;
 	}
-	30%{
+	30% {
 		top: 100px;
 	}
-	40%{
+	40% {
 		top: 100px;
 	}
-	50%{
+	50% {
 		top: 100px;
 	}
-	60%{
+	60% {
 		top: 100px;
 	}
-	70%{
+	70% {
 		top: -100px;
 	}
-	100%{
+	100% {
 		top: -100px;
 	}
 }
-.p-color{
+.p-color {
 	--primaryFont-clr: #000;
 }
-.accent-color{
+.accent-color {
 	color: var(--accent-clr);
 }
-.theme{
+.theme {
 	position: absolute;
 	right: 5%;
 	font-size: 20pt;
 	cursor: pointer;
 }
-.theme::before{
+.theme::before {
 	--scale: 0;
 
 	content: attr(data-tooltip);
@@ -104,34 +105,34 @@ html{
 	border-radius: 0.3rem;
 	width: max-content;
 	padding: 0.5rem;
-	font-family: 'Open Sans', sans-serif;
+	font-family: "Open Sans", sans-serif;
 	transition: transform 0.2s ease-in-out;
 	transform-origin: top center;
 	margin-top: 1.2rem;
 }
-@media (hover: hover){
-	.theme:hover::before{
+@media (hover: hover) {
+	.theme:hover::before {
 		--scale: 1;
 	}
 }
-.theme-mode{
+.theme-mode {
 	pointer-events: none;
 }
-@media (hover: hover){
-	.theme:hover{
+@media (hover: hover) {
+	.theme:hover {
 		opacity: 0.7;
 	}
 }
-.theme:active{
+.theme:active {
 	transform: scale(0.8);
 }
-.rotateForward{
+.rotateForward {
 	transform: rotate(360deg);
-	transition: transform .5s;
+	transition: transform 0.5s;
 }
-.rotateBackward{
+.rotateBackward {
 	transform: rotate(-360deg);
-	transition: transform .5s;
+	transition: transform 0.5s;
 }
 /*Scroll Bar*/
 html::-webkit-scrollbar {
@@ -144,7 +145,7 @@ html::-webkit-scrollbar-thumb {
 	background-color: var(--accent-clr);
 	border-radius: 10px;
 }
-html::-webkit-scrollbar-thumb:hover{
+html::-webkit-scrollbar-thumb:hover {
 	background-color: var(--accent100-clr);
 }
 /*Navgiation Bar*/
@@ -152,10 +153,10 @@ html::-webkit-scrollbar-thumb:hover{
 .logo {
 	color: var(--accent-clr);
 	cursor: default;
-	font-family: 'Lobster', sans-serif;
+	font-family: "Lobster", sans-serif;
 	z-index: 1;
 }
-.logo:hover{
+.logo:hover {
 	color: var(--primaryFont-clr);
 }
 .burger {
@@ -163,14 +164,14 @@ html::-webkit-scrollbar-thumb:hover{
 	cursor: pointer;
 }
 /*BurgerColor*/
-.burger div{
+.burger div {
 	background-color: var(--accent-clr);
 	width: 30px;
 	height: 2px;
 	margin: 5px 0px;
-	transition: .5s ease;
+	transition: 0.5s ease;
 }
-.line2{
+.line2 {
 	width: 25px !important;
 }
 .wrapper {
@@ -191,7 +192,7 @@ nav {
 	border-bottom: 2px solid var(--primary-clr);
 	transition: 0.2s;
 }
-.navContent{
+.navContent {
 	position: relative;
 	display: inline-block;
 }
@@ -199,7 +200,7 @@ nav {
 	display: none;
 	position: absolute;
 	background: var(--primary-blur);
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 	z-index: 1000;
 	border: 1px solid var(--accent-clr);
 	user-select: none;
@@ -217,30 +218,43 @@ nav {
 	text-align: center;
 	transition: 0.1s !important;
 }
-.dropdown-content a:hover {color: var(--accent-clr); transform: scale(1.1);} 
+.dropdown-content a:hover {
+	color: var(--accent-clr);
+	transform: scale(1.1);
+}
 
-.navContent:hover .dropdown-content {display: block;}
+.navContent:hover .dropdown-content {
+	display: block;
+}
 
-.navContent:hover .dropbtn {color: var(--accent-clr) !important; transform: scale(1.1);}
+.navContent:hover .dropbtn {
+	color: var(--accent-clr) !important;
+	transform: scale(1.1);
+}
 
-.navContent:hover .fa-chevron-down{transform: rotate(0);}
+.navContent:hover .fa-chevron-down {
+	transform: rotate(0);
+}
 
-.fa-chevron-down{transform: rotate(180deg); transition: transform 0.1s linear;}
+.fa-chevron-down {
+	transform: rotate(180deg);
+	transition: transform 0.1s linear;
+}
 
-.social-media-links{
+.social-media-links {
 	position: absolute;
 	right: 0;
 	text-align: center;
 }
-.active{
+.active {
 	transition: 0.3s ease-in-out;
 	border-bottom-color: var(--accent-clr);
 	box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.5);
 	background: var(--primary-blur);
 	-webkit-backdrop-filter: saturate(180%) blur(10px);
-    backdrop-filter: saturate(180%) blur(10px);
+	backdrop-filter: saturate(180%) blur(10px);
 }
-.nav-links a{
+.nav-links a {
 	list-style-type: none;
 	display: inline-block;
 	margin: 0px 25px;
@@ -249,18 +263,18 @@ nav {
 	cursor: default;
 	position: relative;
 }
-.nav-links a{
+.nav-links a {
 	color: var(--primaryFont-clr);
 	text-decoration: none;
 	transition: 0.3s ease;
-	font-family: 'Varela Round', sans-serif;
+	font-family: "Varela Round", sans-serif;
 }
 .nav-item:hover {
 	color: var(--accent-clr);
 	transform: scale(1.1);
 }
 /*Head Section*/
-#noscript-warning{
+#noscript-warning {
 	position: fixed;
 	display: flex;
 	left: 0;
@@ -272,7 +286,7 @@ nav {
 	align-items: center;
 	font-size: min(max(10rem, 50%), 1.1rem);
 	z-index: 100;
-	font-family: 'Varela Round', sans-serif;
+	font-family: "Varela Round", sans-serif;
 }
 
 .head-wrapper {
@@ -287,19 +301,19 @@ nav {
 	color: var(--primaryFont-clr);
 	text-align: center;
 }
-.head-title{
+.head-title {
 	margin: 0 2.5rem;
 	font-size: min(max(2rem, 4vw), 3rem);
-	font-family: 'Open Sans', sans-serif;
+	font-family: "Open Sans", sans-serif;
 }
 .head-title span {
 	color: var(--accent-clr);
 }
-.head-paragraph{
+.head-paragraph {
 	font-size: min(max(1.2rem, 2rem), 1.5rem);
 	margin: 3rem 0;
 	width: clamp(300px, 50%, 600px);
-	font-family: 'Hind Siliguri', sans-serif;
+	font-family: "Hind Siliguri", sans-serif;
 }
 .head-button {
 	color: white;
@@ -308,7 +322,7 @@ nav {
 	padding: 15px 45px;
 	border-radius: 50px;
 	text-decoration: none;
-	font-family: 'Varela Round', sans-serif;
+	font-family: "Varela Round", sans-serif;
 	text-transform: uppercase;
 	transition: 0.2s ease;
 }
@@ -316,9 +330,9 @@ nav {
 	.head-button:hover {
 		transform: scale(1.05);
 	}
-  }
+}
 /*Skills Section*/
-.skills-wrapper{
+.skills-wrapper {
 	background-color: var(--primary2-clr);
 	padding: 2rem;
 	display: flex;
@@ -331,15 +345,15 @@ nav {
 	color: var(--primaryFont-clr);
 	font-size: min(max(10pt, 4vw), 1.4rem);
 	margin-bottom: 30px;
-	font-family: 'Open Sans', sans-serif;
+	font-family: "Open Sans", sans-serif;
 }
-.skills-set{
+.skills-set {
 	width: 100%;
 	display: flex;
 	justify-content: center;
 	flex-wrap: wrap;
 }
-.skill-wrap{
+.skill-wrap {
 	width: 400px;
 	height: min(300px);
 	display: flex;
@@ -348,34 +362,35 @@ nav {
 	justify-content: center;
 	text-align: center;
 	margin: 0px 25px 50px;
+	border-radius: 20px;
 	box-shadow: 0px 0px 0px 2px rgba(0, 0, 0, 0.2);
 	transition: 0.2s;
 }
-.skill-wrap:hover{
-	transform: scale(1.1);
+.skill-wrap:hover {
+	transform: translateY(-5px);
 	box-shadow: 0px 0px 0px 2px var(--accent-clr);
 }
-.skill-icon i{
+.skill-icon i {
 	color: var(--accent-clr);
 	font-size: 40pt;
 	font-size: min(max(25pt, 4vw), 40pt);
 }
-.skill-title{
+.skill-title {
 	margin: 25px 10px;
 }
-.skill-title h2{
+.skill-title h2 {
 	color: var(--accent-clr);
 	font-size: min(max(20pt, 4vw), 25pt);
-	font-family: 'Open Sans', sans-serif;
+	font-family: "Open Sans", sans-serif;
 }
-.skill-message p{
+.skill-message p {
 	color: var(--primaryFont-clr);
 	margin: 0px 30px;
 	font-size: 13pt;
-	font-family: 'Hind Siliguri', sans-serif;
+	font-family: "Hind Siliguri", sans-serif;
 }
 /*Projects Section*/
-.projects-wrapper{
+.projects-wrapper {
 	background-color: var(--primary-clr);
 	padding: 2rem;
 	display: flex;
@@ -385,7 +400,7 @@ nav {
 	border-top: 2px solid var(--accent-clr);
 	border-bottom: 2px solid var(--accent-clr);
 }
-.projects-container{
+.projects-container {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -394,7 +409,7 @@ nav {
 .projects-title {
 	color: var(--primaryFont-clr);
 	font-size: min(max(10pt, 8vw), 2.5rem);
-	font-family: 'Open Sans', sans-serif;
+	font-family: "Open Sans", sans-serif;
 	margin: 0 0 4rem 0;
 }
 .projects-div {
@@ -412,39 +427,42 @@ nav {
 	transition: 0.3s ease;
 	position: relative;
 }
-.projects-tag{
+.projects-tag {
 	color: white;
 	position: absolute;
 	z-index: 1;
 	top: 150px;
-	font-family: 'Open Sans', sans-serif;
+	font-family: "Open Sans", sans-serif;
 	pointer-events: none;
 	width: 100%;
 	display: flex;
 	justify-content: center;
 }
-.projects-tag div{
+.projects-tag div {
 	padding: 2px 10px;
 	border-radius: 5px;
 	margin: 0 5px;
 }
-.newTag{
+.newTag {
 	background: red;
 }
-.appTag{
-	background: #FF69B4;
+.appTag {
+	background: #ff69b4;
 }
-.gameTag{
+.gameTag {
 	background: green;
 }
-.webTag{
+.webTag {
 	background: #4169e1;
 }
 .projects-div:hover {
+	transform: translateY(-5px);
 	border-color: var(--accent-clr);
 }
-.projects-div:hover .projects-img img{transform: scale(1.5);}
-.projects-img{
+.projects-div:hover .projects-img img {
+	transform: scale(1.5);
+}
+.projects-img {
 	width: 100%;
 	height: 35%;
 	position: absolute;
@@ -452,21 +470,21 @@ nav {
 	left: 0;
 	overflow: hidden;
 }
-.projects-img img{
+.projects-img img {
 	width: 100%;
 	height: 100%;
 	transition: 0.3s;
 }
-.projects-text h2{
+.projects-text h2 {
 	color: var(--accent-clr);
 	margin: 25px 0 20px 0;
-	font-family: 'Open Sans', sans-serif;
+	font-family: "Open Sans", sans-serif;
 	text-decoration: none;
 }
 .projects-text {
 	color: var(--primaryFont-clr);
 	height: 65%;
-	font-family: 'Hind Siliguri', sans-serif;
+	font-family: "Hind Siliguri", sans-serif;
 	position: absolute;
 	left: 0;
 	bottom: 0;
@@ -476,19 +494,19 @@ nav {
 	justify-content: center;
 	align-content: center;
 }
-.projects-text p{
+.projects-text p {
 	margin: 0 10px 25px;
 	font-size: min(max(5pt, 4vw), 1rem);
 }
-.projects-text span{
+.projects-text span {
 	color: var(--accent-clr);
 }
 
-.projects-text-section{
+.projects-text-section {
 	height: 80px;
 }
 /*Foot Section*/
-.foot-wrapper{
+.foot-wrapper {
 	background-color: var(--primary2-clr);
 	text-align: center;
 	padding: 3rem;
@@ -498,26 +516,26 @@ nav {
 	justify-content: center;
 	align-items: center;
 }
-.foot-wrapper h1{
+.foot-wrapper h1 {
 	color: var(--primaryFont-clr);
 	font-size: 30pt;
-	font-family: 'Lobster', sans-serif;
+	font-family: "Lobster", sans-serif;
 }
-.foot-wrapper i{
+.foot-wrapper i {
 	color: var(--accent-clr);
 	margin: 0 0.5rem;
 	font-size: 30pt;
 	transition: 0.2s ease;
 }
-.copyright{
+.copyright {
 	color: var(--primaryFont-clr);
-	font-family: 'Open Sans', sans-serif;
+	font-family: "Open Sans", sans-serif;
 	cursor: default;
 	user-select: none;
 }
-.version a{
+.version a {
 	color: var(--accent-clr);
-	font-family: 'Open Sans', sans-serif;
+	font-family: "Open Sans", sans-serif;
 	user-select: none;
 	position: absolute;
 	bottom: 10px;
@@ -525,10 +543,10 @@ nav {
 	transform: translateX(-50%);
 	font-size: 10pt;
 }
-.version a:hover{
+.version a:hover {
 	color: #666666;
 }
-.btt{
+.btt {
 	position: fixed;
 	right: 5%;
 	bottom: 5%;
@@ -544,14 +562,14 @@ nav {
 	transform: translateX(500%);
 	transition: transform 1s ease, opacity 0.2s ease-in-out;
 }
-.btt-active{
+.btt-active {
 	transform: translateX(0%);
 }
-.btt:active{
+.btt:active {
 	transform: scale(0.9);
 	transition: 0.1s;
 }
-.btt::before{
+.btt::before {
 	--scale: 0;
 
 	content: attr(data-tooltip);
@@ -563,37 +581,37 @@ nav {
 	border-radius: 0.3rem;
 	width: max-content;
 	padding: 0.5rem;
-	font-family: 'Open Sans', sans-serif;
+	font-family: "Open Sans", sans-serif;
 	transition: transform 0.2s ease-in-out;
 	transform-origin: bottom center;
 	margin-bottom: 1.2rem;
 }
-@media (hover: hover){
-	.btt:hover::before{
+@media (hover: hover) {
+	.btt:hover::before {
 		--scale: 1;
 	}
 }
-.fa-angle-up{
+.fa-angle-up {
 	color: white !important;
 	font-size: 25pt;
 }
-.media-a{
+.media-a {
 	margin: 2rem 0;
 	height: fit-content;
 	cursor: default;
 }
-.media-a a{
+.media-a a {
 	transition: 0.2s;
 	position: relative;
 }
-.media-a:hover a{
+.media-a:hover a {
 	opacity: 0.5;
 }
-.media-a a:hover{
+.media-a a:hover {
 	opacity: 1 !important;
 	transition: 0.2s;
 }
-.media-a a::before{
+.media-a a::before {
 	--scale: 0;
 
 	content: attr(data-tooltip);
@@ -605,18 +623,18 @@ nav {
 	border-radius: 0.3rem;
 	width: max-content;
 	padding: 0.5rem;
-	font-family: 'Open Sans', sans-serif;
+	font-family: "Open Sans", sans-serif;
 	transition: transform 0.2s ease-in-out;
 	transform-origin: bottom center;
-	margin-bottom: .25rem;
+	margin-bottom: 0.25rem;
 }
-@media (hover: hover){
-	.media-a a:hover::before{
+@media (hover: hover) {
+	.media-a a:hover::before {
 		--scale: 1;
 	}
 }
 /*Mobile Support*/
-@media screen and (max-width: 812px){
+@media screen and (max-width: 812px) {
 	/*Navbar Mobile*/
 	.nav-links {
 		position: absolute;
@@ -632,13 +650,13 @@ nav {
 		transform: translateX(100%);
 		animation: bounceBack 0.5s;
 	}
-	.fa-chevron-down{
+	.fa-chevron-down {
 		display: none !important;
 	}
-	.dropdown-content{
+	.dropdown-content {
 		display: none !important;
 	}
-	.nav-links a{
+	.nav-links a {
 		font-size: 20pt;
 		margin: 20px 0;
 	}
@@ -647,65 +665,65 @@ nav {
 		animation: appear 1s;
 		overflow: hidden;
 	}
-	.fixed-position{
+	.fixed-position {
 		overflow: hidden;
 	}
-	@keyframes appear{
-		0%{
+	@keyframes appear {
+		0% {
 			opacity: 0;
 			transform: translate(0);
 		}
-		25%{
+		25% {
 			opacity: 0;
 			transform: translate(0);
 		}
-		25%{
+		25% {
 			opacity: 1;
 			transform: translate(0);
 		}
-		50%{
+		50% {
 			opacity: 1;
 			transform: translate(0);
 		}
-		75%{
+		75% {
 			opacity: 1;
 			transform: translate(0);
 		}
-		100%{
+		100% {
 			opacity: 1;
 			transform: translate(0);
 		}
 	}
-	@keyframes bounceBack{
-		0%{
+	@keyframes bounceBack {
+		0% {
 			opacity: 1;
 			transform: translate(0);
 		}
-		25%{
+		25% {
 			opacity: 1;
 			transform: translate(0);
 		}
-		50%{
+		50% {
 			opacity: 0;
 			transform: translate(0);
 		}
-		75%{
+		75% {
 			opacity: 0;
 			transform: translate(0);
 		}
-		100%{
+		100% {
 			opacity: 0;
 			transform: translate(0);
 		}
 	}
-	@keyframes fadeIn{
-		0%{
+	@keyframes fadeIn {
+		0% {
 			opacity: 0;
 		}
-		50%{
+		50% {
 			opacity: 0;
 		}
-		100%{
+		100% {
 			opacity: 1;
 		}
 	}
@@ -717,15 +735,14 @@ nav {
 	}
 	.toggle .line1 {
 		transform: rotate(45deg) translate(4px, 6px);
-		transition: transform .3s ease;
+		transition: transform 0.3s ease;
 	}
 	.toggle .line2 {
 		opacity: 0;
-		transition: opacity .3s ease;
+		transition: opacity 0.3s ease;
 	}
 	.toggle .line3 {
 		transform: rotate(-45deg) translate(4px, -6px);
-		transition: transform .3s ease;
+		transition: transform 0.3s ease;
 	}
 }
-
