--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -353,6 +353,7 @@ nav {
     color: var(--primaryFont-clr);
     text-align: center;
     transition: 0.2s ease;
+    margin-top: -3rem;
 }
 
 .head-title {
