--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -732,9 +732,9 @@ nav {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    transform: translateX(100%);
-    -webkit-animation: bounceBack 0.5s;
-            animation: bounceBack 0.5s;
+    opacity: 0;
+    pointer-events: none;
+    transition: 0.1s ease opacity;
   }
   .fa-chevron-down {
     display: none !important;
@@ -747,131 +747,12 @@ nav {
     margin: 20px 0;
   }
   .nav-active {
-    transform: translateX(0);
-    -webkit-animation: appear 1s;
-            animation: appear 1s;
+    pointer-events: all;
+    opacity: 1;
     overflow: hidden;
   }
   .fixed-position {
     overflow: hidden;
-  }
-  @-webkit-keyframes appear {
-    0% {
-      opacity: 0;
-      transform: translate(0);
-    }
-    25% {
-      opacity: 0;
-      transform: translate(0);
-    }
-    25% {
-      opacity: 1;
-      transform: translate(0);
-    }
-    50% {
-      opacity: 1;
-      transform: translate(0);
-    }
-    75% {
-      opacity: 1;
-      transform: translate(0);
-    }
-    100% {
-      opacity: 1;
-      transform: translate(0);
-    }
-  }
-  @keyframes appear {
-    0% {
-      opacity: 0;
-      transform: translate(0);
-    }
-    25% {
-      opacity: 0;
-      transform: translate(0);
-    }
-    25% {
-      opacity: 1;
-      transform: translate(0);
-    }
-    50% {
-      opacity: 1;
-      transform: translate(0);
-    }
-    75% {
-      opacity: 1;
-      transform: translate(0);
-    }
-    100% {
-      opacity: 1;
-      transform: translate(0);
-    }
-  }
-  @-webkit-keyframes bounceBack {
-    0% {
-      opacity: 1;
-      transform: translate(0);
-    }
-    25% {
-      opacity: 1;
-      transform: translate(0);
-    }
-    50% {
-      opacity: 0;
-      transform: translate(0);
-    }
-    75% {
-      opacity: 0;
-      transform: translate(0);
-    }
-    100% {
-      opacity: 0;
-      transform: translate(0);
-    }
-  }
-  @keyframes bounceBack {
-    0% {
-      opacity: 1;
-      transform: translate(0);
-    }
-    25% {
-      opacity: 1;
-      transform: translate(0);
-    }
-    50% {
-      opacity: 0;
-      transform: translate(0);
-    }
-    75% {
-      opacity: 0;
-      transform: translate(0);
-    }
-    100% {
-      opacity: 0;
-      transform: translate(0);
-    }
-  }
-  @-webkit-keyframes fadeIn {
-    0% {
-      opacity: 0;
-    }
-    50% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  @keyframes fadeIn {
-    0% {
-      opacity: 0;
-    }
-    50% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
   }
   .nav-links li {
     margin: 25px 75px;
